@@ -44,6 +44,7 @@ function bnt_compress ($output = null)
         header ('Vary: Accept-Encoding');
         header ('Content-Encoding: gzip');
         header ("DEBUG: gzip found");
+
         return gzencode ($output, 9);
     }
     elseif (in_array ("deflate", $supported_enc) === true)
@@ -51,11 +52,13 @@ function bnt_compress ($output = null)
         header ('Vary: Accept-Encoding');
         header ('Content-Encoding: deflate');
         header ("DEBUG: deflate found");
+
         return gzdeflate ($output, 9);
     }
     else
     {
         header ("DEBUG: None found");
+
         return $output;
     }
 }
