@@ -18,11 +18,10 @@
 // File: plugins/test_plugin/plugin_loader.php
 
 $pluginname = "PluginTest";
-$plugin_config[$pluginname]['enabled']                  = true;     # Enable plugin.
+$plugin_config[$pluginname]['enabled']                  = true;     // Enable plugin.
 
-$plugin_config[$pluginname]['has_loader']               = true;     # Used to autoloading the plugin loader.
-$plugin_config[$pluginname]['has_settings']             = true;     # ??.
+$plugin_config[$pluginname]['has_loader']               = true;     // Used to autoloading the plugin loader.
+$plugin_config[$pluginname]['has_settings']             = true;     // ??.
 $plugin_config[$pluginname]['plugin_type']              = "Test Plugin";
-
 
 ?>
