@@ -144,7 +144,7 @@ else
             $sched_i = 0;
             while ($sched_i < $multiplier)
             {
-                include "./" . $event['sched_file'];
+                include './'. $event['sched_file'];
                 $sched_i++;
             }
             $sched_res->MoveNext();
